--------------------------
Changelog
--------------------------

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/)
and this project adheres to [Semantic Versioning](http://semver.org/).
2018-02-25 Benoit Desrochers <ben.ensta@gmail.com>
  * [update] pybind11 version > 2.2.1 (#b48d4a)
  * [update] doc
  * [new] CtcHull and CtcPaving
  * [new] Paving object
  
2017-09-12 Benoit Desrochers <ben.ensta@gmail.com>
  * PATCH v1.6.3b
  * [add] Interval Matrix shape function (need to be converted in property)
  * [update] fix pybind11 version to 2.2.1.

2017-08-07 Benoit Desrochers <ben.ensta@gmail.com>
  * PATCH v1.6.3a
  * [update] use last pybind version
  * [add] diff operator for function
  * [add] perftools to measure execution time
  * [add] inner argument in CtcRaster to handle part which is outside the bbox of the image
  * [fix] sepProj bugs
  * [fix] SepTransform bwd operation
  * [fix] bug in Catan2 when x=[0,0]
  * [fix] bug in SepPolarXY when computing the complementary of [rho]x[theta]
  * [fix] PdcInPolygon can return MAYBE (need ibex update)
  * [fix] Bug with SepBoundary with undeterminated case (need ibex fix)

2017-07-14 Benoit Desrochers <ben.ensta@gmail.com>
  * RELEASE v1.6.2
  * [new] add image module with CtcRaster
  * [change] vertices are passed as [[x1, y1], [x2, y2], ...] to SepPolygon constructor
  * [fix] inverse fbwd and ffwd arguement in SepTransform

2017-07-10 Benoit Desrochers <ben.ensta@gmail.com>
  * [update] add "oo" to represent infinit number in order to write [0, oo]
  * [fix] conversion of [lb, ub] to Interval. ex: SepFwdBwd(f, [1, 2])
  * [fix] errors in SepProj algorithm
  * [update] add message when syntaxe error is raised in Function constructor

2017-07-02 Benoit Desrochers <ben.ensta@gmail.com>
  * [fix] add default arguement ratio for CtcFixPoint
  * [update] add automoatic conversion from Interval to IntervalVector